# macro_counter

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.dev.txt
app/: __main__.py
ingredients/: __init__.py  base.py  display.py
macro_counter/: __init__.py  __main__.py  adapters.py  display.py  fields.py  models.py  repository.py  settings.py
macro_counter/adapters/: __init__.py  file.py  mongo.py
macro_counter/app/: parsers.py  prompt.py
macro_counter/core/: settings.py
macro_counter/ingredients/: __init__.py  display.py
macro_counter/prompts/: base.py  main.py  parsers.py  plan.py  register.py  root.py  state.py  validator.py
macro_counter/repositories/: local.py
macro_counter/repositories/components/: __init__.py  local.py
macro_counter/repository/: mongo.py
macro_counter/utils/: float.py  json.py  pydantic.py  settings.py
prompts/: base.py  main.py  plan.py  register.py  settings.py
tests/: conftest.py  test_components.py  test_models.py  test_prompt.py  test_repository.py  test_settings.py
tests/ingredients/: test_models.py
tests/models/: test_components.py  test_fields.py
tests/repositories/: test_file.py  test_mongo.py
tests/repository/: test_mongo.py
