[tool.poetry]
name = "macro_counter"
version = "0.1.0"
description = "Python macro nutrient tracker."
authors = ["Laurent Arthur <laurent.arthur75@gmail.com>"]

license = "GPLv3"

readme = "README.md"

repository = "https://github.com/ludwig778/macro_counter"

classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.poetry.dependencies]
python = "^3.6.1"
prompt-toolkit = "^3.0.18"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
isort = "^5.8.0"
piprot = "^0.9.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
